# epiphan-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  init.sh  pyproject.toml  server.json
.claude/: BACKLOG.md  PROJECT_CONTEXT.md  TECHNICAL_ROADMAP.md
.claude/agents/: observer-full.md  observer-lite.md
.claude/observers/: ARCH.md  QUALITY.md
.claude/rules/: coding.md
.github/workflows/: ci.yml
autoresearch/: evaluate.sh  program.md  results.tsv  run.sh
docs/: EXTERNAL_RESOURCES.md  HARDWARE_VALIDATION.md  PEARL_API_AUDIT.md  PRD.md  PRP.md  SPRINT_REPORT.md  health-monitoring.md  lane-a-design-notes.md  proav-ontology.md
docs/api/: pearl_openapi_v2.0.yml
examples/lane_a_spike/: README.md  adapter.py  run.py  sink.py
examples/local_agent/: README.md  agent.py  tool_profiles.py
scripts/: validate_cms.py  validate_ec20.py
src/epiphan_mcp/: __init__.py  __main__.py  audit.py  client.py  config.py  models.py  retry.py  server.py  validation.py
src/epiphan_mcp/integrations/: __init__.py  _pagination.py  _upload.py  cloud.py  ec20.py  echo360.py  kaltura.py  opencast.py  panopto.py  qsys.py  youtube.py  yuja.py
src/epiphan_mcp/llm/: __init__.py  analyzer.py  config.py  providers.py
src/epiphan_mcp/tools/: __init__.py  ai_tools.py  cloud.py  device.py  discovery.py  ec20.py  echo360.py  fleet.py  fleet_intelligence.py  inputs.py  kaltura.py  layout.py  maintenance.py  opencast.py  panopto.py  params.py  publishers.py  qsys.py  recording.py  schedule.py  storage.py  streaming.py  system.py  youtube.py  yuja.py
tests/: __init__.py  conftest.py  test_ai_tools.py  test_audit.py  test_client.py  test_cloud_client.py  test_cloud_tools.py  test_config.py  test_device.py  test_discovery.py  test_ec20.py  test_echo360.py  test_edge_cases.py  test_fleet.py  test_fleet_intelligence.py  test_inputs.py  test_integration.py  test_kaltura.py  test_lane_a_spike.py  test_llm.py  test_opencast.py  test_pagination.py  test_panopto.py  test_publishers.py  test_qsys.py  test_recording.py  test_retry.py  test_server.py  test_streaming.py  test_system.py  test_tool_schemas.py  test_tools_imports.py  test_upload_helpers.py  test_validation.py  test_youtube.py  test_yuja.py
tests/fixtures/: mocks.py  responses.py  tool_snapshot.json
