[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epiphan-mcp"
version = "1.2.0"
description = "MCP server for Epiphan Pearl video capture devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tim Kipper", email = "tkipper@epiphan.com" }
]
keywords = [
    "mcp",
    "epiphan",
    "pearl",
    "video-capture",
    "streaming",
    "ai",
    "claude"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=0.1.0,<3",
    "httpx>=0.25.0,<1",
    "pydantic>=2.4.0,<3",  # CVE-2024-3772 fix
    "pydantic-settings>=2.0.0,<3",
    "python-dotenv>=1.0.0",
    # AI/LLM integration (OpenRouter gateway)
    # Note: No openai package needed - using httpx directly for OpenRouter API
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
# Local-model agent harness (examples/local_agent/). Talks to Ollama's
# OpenAI-compatible endpoint over httpx — both fastmcp and httpx are already core
# deps, so no additional packages are required. Listed for discoverability.
local-agent = [
    "httpx>=0.25.0,<1",
]

[project.urls]
Homepage = "https://github.com/tmkipper/epiphan-mcp-server"
Documentation = "https://github.com/tmkipper/epiphan-mcp-server#readme"
Repository = "https://github.com/tmkipper/epiphan-mcp-server"
Issues = "https://github.com/tmkipper/epiphan-mcp-server/issues"

[project.scripts]
epiphan-mcp = "epiphan_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epiphan_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real hardware (deselect with '-m \"not integration\"')",
    "destructive: marks tests that modify device state",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["epiphan_mcp"]

[tool.coverage.run]
source = ["src/epiphan_mcp"]
omit = ["src/epiphan_mcp/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "mcp.run()",
]
